2003-03-28  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/sninit.tcl (sn_tcl_tk_init): Fix prepend
	of SN bin dir to the PATH env var on startup.
	The previous code used : as the PATH separator
	under Windows which was causing problems with exec.
	The problem manifested itself as a mysterious exec
	error when attempting to build with Cygwin make.
	[Bug 658173]

2003-03-11  Steven Johnson  <sjohnson@neurizon.net>

	* gui/projedit.tcl (add_files_cb): Use a foreach
	loop instead of an array set call since the
	join optimization used in the method broke
	when processing files where the name included
	a space.

2003-03-11  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/editorpane.tcl (InsertTab, Newline):
	Use string repeat instead of a for loop since
	it is more clear and executes more quickly.
	Re-implement the Newline proc, it was doing
	extra work when it was not needed and creating
	extra variables for no reason. Incorporate
	the translate tabs to spaces patch submitted
	by sjohnson@neurizon.net. [Bug 685173]

2003-02-22  Ian Roxborough  <irox@ix.netcom.com>

	* gui/editorpane.tcl (Editor&::SearchForNext
	Editor&::Replace_String Editor&::insert_file_cb
	Editor&::SetFondPos Editor&::Indent):
	* gui/text.tcl (tkTextSelectTo tkTextSelectAll
	tkTextKeySelect tkTextMarkPara):
	* gui/multiview.tcl (MultiWindow&::edit_selectall):
	When setting the selection, raise the selection to
	highest level, otherwise the selected text will not
	have the selection foreground color and maybe be
	unreadable (i.e. light yellow text with a slightly
	different light yellow background).

2003-02-22  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/classtreepane.tcl (constructor):
	* gui/editorpane.tcl (constructor):
	* gui/includepane.tcl (constructor):
	* gui/xrefpane.tcl (constructor): Grid scrollbars
	and main window so that x scroll does not extend
	below the y scroll. This makes the Edit, Hierarchy,
	Xref, and Include tabs look correct.
